# thunar

./: Makefile.am  TODO  configure.in.in  techstack.md  techstack.yml
plugins/thunar-uca/: thunar-uca-editor.c  thunar-uca-model.c  thunar-uca-model.h  thunar-uca-provider.c  uca.xml.in
thunar/: Makefile.am  main.c  thunar-browser.c  thunar-browser.h  thunar-desktop.c  thunar-desktop.h  thunar-enum-types.c  thunar-enum-types.h  thunar-file.c  thunar-file.h  thunar-icon-factory.c  thunar-icon-renderer.c  thunar-launcher.c  thunar-location-entry.c  thunar-marshal.list  thunar-progress-dialog.c  thunar-progress-view.c  thunar-shortcut-group.c  thunar-shortcut-group.h  thunar-shortcut-row.c  thunar-shortcut-row.h  thunar-shortcut.c  thunar-shortcut.h  thunar-shortcuts-model.c  thunar-shortcuts-model.h  thunar-shortcuts-pane.c  thunar-shortcuts-pane.h  thunar-shortcuts-view.c  thunar-shortcuts-view.h  thunar-standard-view-ui.xml  thunar-standard-view.c  thunar-statusbar.c  thunar-transfer-job.c  thunar-util.c  thunar-window-ui.xml  thunar-window.c
thunar-vfs-thumbnailer/: Makefile.am  thunar-vfs-thumbnailer-plugin.c  thunar-vfs-thumbnailer-provider.c  thunar-vfs-thumbnailer-provider.h  thunar-vfs-thumbnailer.c  thunar-vfs-thumbnailer.h
thunarx/: Makefile.am  thunarx-desktop-view-provider.c  thunarx-desktop-view-provider.h  thunarx-desktop-view.c  thunarx-desktop-view.h  thunarx.h
tumbler-plugins/: Makefile.am
tumbler-plugins/thunar-vfs-thumbnailer/: thunar-vfs-thumbnailer-provider.c  thunar-vfs-thumbnailer.c
